# DiscoverVersion

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
DiscoverVersion/: Discovery.py  __init__.py  __main__.py  discovery.py  meson_python.py  scikit_build_core.py  version.py
test/: test_version_discovery.py
