[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "DiscoverVersion"
description = "Version discovery for Python packages"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python"
]
requires-python = ">=3.8.0"
dynamic = [ "version" ]

[project.optional-dependencies]
test = [
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-flake8"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project.urls]
documentation = "https://imtek-simulation.github.io/DiscoverVersion/"
repository = "https://github.com/imtek-simulation/DiscoverVersion"
changelog = "https://github.com/imtek-simulation/DiscoverVersion/blob/master/CHANGELOG.md"
