[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "DiscoverVersion"
description = "Version discovery for Python packages"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" }
]
keywords = [
    "version",
    "versioning",
    "git",
    "setuptools_scm",
    "setuptools-scm",
    "scm",
    "meson",
    "meson-python",
    "flit",
    "packaging",
    "build"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control :: Git"
]
requires-python = ">=3.8.0"
dynamic = [ "version" ]

[project.optional-dependencies]
test = [
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-flake8"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project.scripts]
discover-version = "DiscoverVersion.__main__:main"

[project.urls]
documentation = "https://imtek-simulation.github.io/DiscoverVersion/"
repository = "https://github.com/imtek-simulation/DiscoverVersion"
changelog = "https://github.com/imtek-simulation/DiscoverVersion/blob/master/CHANGELOG.md"
